--- a/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
+++ b/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:id="@+id/background">
+    android:animateLayoutChanges="true">
+
 
     <RelativeLayout
         android:id="@+id/remoteVideoWrapper"
@@ -22,6 +24,7 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
+
 
     <!--    region Video-->
     <View
@@ -136,6 +139,71 @@
         tools:visibility="gone" />
     <!--    endregion-->
 
+    <!--    region ScreenShare-->
+
+    <TextView
+        android:id="@+id/screenSharingNotice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/mm_you_are_sharing_a_screen"
+        android:textColor="@color/rtc_ui_white"
+        app:layout_constraintBottom_toTopOf="@id/screenSharingDisable"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/screenSharingDisable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/mm_stop_sharing_screen"
+        android:textColor="@color/rtc_ui_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/screenSharingNotice"
+        tools:visibility="visible" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/screenSharingRenderers"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.infobip.webrtc.sdk.api.model.video.VideoRenderer
+            android:id="@+id/remoteVideoScreenSharing"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="2dp"
+            android:visibility="gone" />
+
+        <com.infobip.webrtc.sdk.api.model.video.VideoRenderer
+            android:id="@+id/localVideoScreenSharing"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="2dp"
+            android:visibility="gone" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/screenSharingGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="screenSharingNotice,screenSharingDisable" />
+    <!--    endregion-->
+
     <ImageView
         android:id="@+id/collapseCallButton"
         style="@style/ViewRipple_Borderless"
@@ -161,185 +229,13 @@
         android:id="@+id/avatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/buttonsFlow"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timeBarrier"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_user_grayscale"/>
+        app:srcCompat="@drawable/ic_user_grayscale" />
 
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/buttonsFlow"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="muteButton,videoButton,speakerButton,flipCamButton,screenShareButton"
-        app:flow_horizontalStyle="spread"
-        app:flow_maxElementsWrap="@integer/rtc_ui_in_call_fragment_buttons_flow_max_element_wrap"
-        app:flow_verticalGap="36dp"
-        app:flow_wrapMode="chain"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toTopOf="@id/hangupButton" />
-
-    <com.infobip.webrtc.ui.view.CircleImageButton
-        android:id="@+id/muteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:checkedCircleBackground="@color/rtc_ui_foreground"
-        app:checkedIcon="@drawable/ic_mute"
-        app:checkedIconColor="@color/rtc_ui_actions_icon_checked"
-        app:circleBackground="@color/rtc_ui_actions_background"
-        app:icon="@drawable/ic_unmute"
-        app:iconColor="@color/rtc_ui_foreground" />
-
-    <TextView
-        android:id="@+id/muteLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/rtc_ui_foreground"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/muteButton"
-        app:layout_constraintStart_toStartOf="@id/muteButton"
-        app:layout_constraintTop_toBottomOf="@id/muteButton"
-        android:text="@string/mm_microphone"/>
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/mute"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="muteButton, muteLabel" />
-
-    <com.infobip.webrtc.ui.view.CircleImageButton
-        android:id="@+id/videoButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:checkedCircleBackground="@color/rtc_ui_foreground"
-        app:checkedIcon="@drawable/ic_video"
-        app:checkedIconColor="@color/rtc_ui_actions_icon_checked"
-        app:circleBackground="@color/rtc_ui_actions_background"
-        app:icon="@drawable/ic_video_off"
-        app:iconColor="@color/rtc_ui_foreground" />
-
-    <TextView
-        android:id="@+id/videoLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/rtc_ui_foreground"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/videoButton"
-        app:layout_constraintStart_toStartOf="@id/videoButton"
-        app:layout_constraintTop_toBottomOf="@id/videoButton"
-        android:text="@string/mm_video_call"/>
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="videoButton, videoLabel" />
-
-    <com.infobip.webrtc.ui.view.CircleImageButton
-        android:id="@+id/speakerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:checkedCircleBackground="@color/rtc_ui_foreground"
-        app:checkedIcon="@drawable/ic_speaker"
-        app:checkedIconColor="@color/rtc_ui_actions_icon_checked"
-        app:circleBackground="@color/rtc_ui_actions_background"
-        app:icon="@drawable/ic_speaker_off"
-        app:iconColor="@color/rtc_ui_foreground"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/speakerLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/rtc_ui_foreground"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/speakerButton"
-        app:layout_constraintStart_toStartOf="@id/speakerButton"
-        app:layout_constraintTop_toBottomOf="@id/speakerButton"
-        android:text="@string/mm_speaker"/>
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/speaker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="speakerButton, speakerLabel" />
-
-    <com.infobip.webrtc.ui.view.CircleImageButton
-        android:id="@+id/flipCamButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:checkedCircleBackground="@color/rtc_ui_foreground"
-        app:checkedIconColor="@color/rtc_ui_actions_icon_checked"
-        app:circleBackground="@color/rtc_ui_actions_background"
-        app:icon="@drawable/ic_flip_camera"
-        app:iconColor="@color/rtc_ui_foreground"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/flipCamLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/rtc_ui_foreground"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/flipCamButton"
-        app:layout_constraintStart_toStartOf="@id/flipCamButton"
-        app:layout_constraintTop_toBottomOf="@id/flipCamButton"
-        android:text="@string/mm_flip_camera"/>
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/flipCam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="flipCamButton, flipCamLabel" />
-
-    <com.infobip.webrtc.ui.view.CircleImageButton
-        android:id="@+id/screenShareButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:circleBackground="@color/rtc_ui_actions_background"
-        app:checkedCircleBackground="@color/rtc_ui_foreground"
-        app:checkedIconColor="@color/rtc_ui_actions_icon_checked"
-        app:icon="@drawable/ic_screen_share"
-        app:iconColor="@color/rtc_ui_foreground" />
-
-    <TextView
-        android:id="@+id/screenShareLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/rtc_ui_foreground"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/screenShareButton"
-        app:layout_constraintStart_toStartOf="@id/screenShareButton"
-        app:layout_constraintTop_toBottomOf="@id/screenShareButton"
-        android:text="@string/mm_screen_share"/>
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/screenShare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="screenShareButton, screenShareLabel" />
-
-    <com.infobip.webrtc.ui.view.CircleImageButton
-        android:id="@+id/hangupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:circleBackground="@color/rtc_ui_hangup"
-        app:icon="@drawable/ic_endcall"
-        app:iconColor="@color/rtc_ui_foreground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginVertical="48dp" />
 
     <com.infobip.webrtc.ui.view.CallAlert
         android:id="@+id/weakConnectionAlert"
@@ -349,10 +245,9 @@
         android:visibility="gone"
         app:alertIcon="@drawable/ic_alert_triangle"
         app:alertText="@string/mm_call_weak_internet_connection"
-        app:alertTextColor="@color/rtc_ui_foreground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/localVideoBarrier"
+        app:layout_constraintTop_toBottomOf="@id/toolbarBarier"
         tools:visibility="gone" />
 
     <com.infobip.webrtc.ui.view.CallAlert
@@ -366,22 +261,23 @@
         app:alertIcon="@drawable/ic_unmute"
         app:alertIconTint="@color/rtc_ui_foreground"
         app:alertText="@string/mm_your_microphone_is_muted"
-        app:alertTextColor="@color/rtc_ui_foreground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/weakConnectionAlert"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <com.infobip.webrtc.sdk.api.model.video.VideoRenderer
         android:id="@+id/localVideo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="16dp"
+        android:elevation="1dp"
         android:visibility="gone"
         app:layout_constraintDimensionRatio="1:1.6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.25"
-        app:layout_constraintTop_toBottomOf="@id/localVideoBarrier" />
+        app:layout_constraintTop_toBottomOf="@id/toolbarBarier"
+        tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/videoGroup"
@@ -398,10 +294,23 @@
         app:constraint_referenced_ids="nameInVoice,avatar" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/localVideoBarrier"
+        android:id="@+id/toolbarBarier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="collapseCallButton,toolbarBackground" />
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <include
+            android:id="@+id/bottomSheet"
+            layout="@layout/widget_bottom_sheet_buttons" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
