--- a/infobip-rtc-ui/src/main/res/layout/widget_circle_image_button.xml
+++ b/infobip-rtc-ui/src/main/res/layout/widget_circle_image_button.xml
@@ -9,6 +9,7 @@
         style="@style/ViewRipple_Borderless"
         android:layout_width="56dp"
         android:layout_height="56dp"
+        android:layout_marginHorizontal="8dp"
         android:src="@drawable/ic_circle_full"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
