--- a/infobip-rtc-ui/src/main/res/values/attributes.xml
+++ b/infobip-rtc-ui/src/main/res/values/attributes.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="CircleImageButton">
-        <attr name="icon" format="reference" />
-        <attr name="checkedIcon" format="reference" />
-        <attr name="circleBackground" format="reference" />
+        <attr name="circleBtnIcon" format="reference"/>
+        <attr name="circleBtnCheckedIcon" format="reference"/>
+        <attr name="circleBtnIconColor" format="reference"/>
+        <attr name="circleBtnCheckedIconColor" format="reference"/>
+        <attr name="circleBackground" format="reference"/>
         <attr name="checkedCircleBackground" format="reference" />
-        <attr name="checkedIconColor" format="reference" />
-        <attr name="iconColor" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="CallAlert">
@@ -20,19 +20,26 @@
 
     <declare-styleable name="InfobipRtcUi">
         <attr name="rtc_ui_color_foreground" format="color|reference" />
-        <attr name="rtc_ui_color_notification" format="color|reference" />
         <attr name="rtc_ui_color_actions_background" format="color|reference" />
         <attr name="rtc_ui_color_actions_background_checked" format="color|reference" />
         <attr name="rtc_ui_color_actions_icon" format="color|reference" />
         <attr name="rtc_ui_color_actions_icon_checked" format="color|reference" />
+        <attr name="rtc_ui_color_actions_row_background" format="color|reference" />
+        <attr name="rtc_ui_color_actions_row_icon" format="color|reference" />
+        <attr name="rtc_ui_color_actions_row_label" format="color|reference" />
+        <attr name="rtc_ui_color_sheet_pill" format="color|reference" />
+        <attr name="rtc_ui_color_actions_divider" format="color|reference" />
+        <attr name="rtc_ui_color_sheet_background" format="color|reference" />
         <attr name="rtc_ui_color_text_secondary" format="color|reference" />
         <attr name="rtc_ui_color_background" format="color|reference" />
         <attr name="rtc_ui_color_overlay_background" format="color|reference" />
         <attr name="rtc_ui_color_alert_background" format="color|reference" />
+        <attr name="rtc_ui_color_alert_text" format="color|reference" />
         <attr name="rtc_ui_color_accept" format="color|reference" />
         <attr name="rtc_ui_color_hangup" format="color|reference" />
         <attr name="rtc_ui_icon_unMute" format="reference" />
         <attr name="rtc_ui_icon_screenShare" format="reference" />
+        <attr name="rtc_ui_icon_screenShareOff" format="reference" />
         <attr name="rtc_ui_icon_avatar" format="reference" />
         <attr name="rtc_ui_icon_video" format="reference" />
         <attr name="rtc_ui_icon_videoOff" format="reference" />
