Pull request #392: Mtokar MCA-3308 reconnection events
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3308-reconnection-events to master

Squashed commit of the following:

commit d5b85cf64af05f730ce122c2b8acec571e551d8f
Merge: ccfdddb7 676dabdd
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Oct 17 10:15:02 2023 +0200

    Merge branch 'mtokar-MCA-3311_rtc_ui_design_update_missing_translations' into mtokar-MCA-3308-reconnection-events

    # Conflicts:
    #	infobip-rtc-ui/src/main/res/values-ar/strings.xml
    #	infobip-rtc-ui/src/main/res/values-cs/strings.xml
    #	infobip-rtc-ui/src/main/res/values-da/strings.xml
    #	infobip-rtc-ui/src/main/res/values-de/strings.xml
    #	infobip-rtc-ui/src/main/res/values-es/strings.xml
    #	infobip-rtc-ui/src/main/res/values-fi-rFI/strings.xml
    #	infobip-rtc-ui/src/main/res/values-fr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hi/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-hu/strings.xml
    #	infobip-rtc-ui/src/main/res/values-in/strings.xml
    #	infobip-rtc-ui/src/main/res/values-it/strings.xml
    #	infobip-rtc-ui/src/main/res/values-iw/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ja/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ko/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ms/strings.xml
    #	infobip-rtc-ui/src/main/res/values-nl/strings.xml
    #	infobip-rtc-ui/src/main/res/values-pl/strings.xml
    #	infobip-rtc-ui/src/main/res/values-pt/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ro/strings.xml
    #	infobip-rtc-ui/src/main/res/values-ru/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sk/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sq/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sr/strings.xml
    #	infobip-rtc-ui/src/main/res/values-sv/strings.xml
    #	infobip-rtc-ui/src/main/res/values-th/strings.xml
    #	infobip-rtc-ui/src/main/res/values-tr/strings.xml
 

--- a/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
+++ b/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
@@ -238,13 +238,11 @@
 
 
     <com.infobip.webrtc.ui.view.CallAlert
-        android:id="@+id/weakConnectionAlert"
+        android:id="@+id/connectionAlert"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:visibility="gone"
-        app:alertIcon="@drawable/ic_alert_triangle"
-        app:alertText="@string/mm_call_weak_internet_connection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbarBarier"
@@ -263,7 +261,7 @@
         app:alertText="@string/mm_your_microphone_is_muted"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/weakConnectionAlert"
+        app:layout_constraintTop_toBottomOf="@id/connectionAlert"
         tools:visibility="visible" />
 
     <com.infobip.webrtc.sdk.api.model.video.VideoRenderer
