Pull request #395: feature/MCA-3216_revert_removed_alert_color_style
Merge in MML/infobip-mobile-messaging-android from feature/MCA-3216_revert_removed_alert_color_style to master

Squashed commit of the following:

commit cc9730e6800a23cab14e72fe0b08af0c52bff21e
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Oct 19 14:12:19 2023 +0200

    MCA-3216: alert background reverted

--- a/infobip-rtc-ui/src/main/res/values/styles.xml
+++ b/infobip-rtc-ui/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="rtc_ui_color_text_secondary">@color/rtc_ui_text_secondary</item>
         <item name="rtc_ui_color_background">@color/rtc_ui_background</item>
         <item name="rtc_ui_color_overlay_background">@color/rtc_ui_overlay_background</item>
+        <item name="rtc_ui_color_alert_background">@color/rtc_ui_alert_background</item>
         <item name="rtc_ui_color_accept">@color/rtc_ui_accept</item>
         <item name="rtc_ui_color_hangup">@color/rtc_ui_hangup</item>
         <item name="rtc_ui_icon_unMute">@drawable/ic_unmute</item>
