Pull request #415: MCA-3547 Added support for chinese simplified
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3547-chinese-lang to master

Squashed commit of the following:

commit e33d1bec061012a9dfe73cc1df93c51f089cdef8
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Fri Jan 12 16:34:52 2024 +0100

    MCA-3547 Chinese Traditional added

commit 3324d17fe67862eb206dc73a8f11d08a492c5b93
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Fri Jan 12 16:27:09 2024 +0100

    MCA-3547 Added support for chinese simplified

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/menu/menu_main.xml
@@ -29,9 +29,14 @@
             android:title="@string/russian"
             app:showAsAction="never" />
         <item
-            android:id="@+id/chinese"
+            android:id="@+id/chinese_traditional"
             android:enabled="true"
-            android:title="@string/chinese"
+            android:title="@string/chinese_traditional"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/chinese_simplified"
+            android:enabled="true"
+            android:title="@string/chinese_simplified"
             app:showAsAction="never" />
         <item
             android:id="@+id/spanish"
