Pull request #427: Jdzubak MCA-3664 set widget theme
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3664-set-widget-theme to master

Squashed commit of the following:

commit 0a9443fc9a6482371fbc7047d0152ca8b6fc86fb
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Mar 19 13:35:16 2024 +0100

    MCA-3664 Review points

commit ebb584afc394361a75d2d28b1aa0c18cff8a23c3
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Mar 19 13:02:06 2024 +0100

    MCA-3787 WidgetTheme applied once chat is loaded, WidgetInfo contains widgetThemes

commit 0f2fe96744483fc13df8bdf9b7e6359c9bb7bc1d
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Mon Mar 18 10:19:42 2024 +0100

    MCA-3664 Styles internal variable removed

commit a5da35ee7f41ed1a309a9a49773f341e288c6708
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Mon Mar 18 09:55:25 2024 +0100

    MCA-3664 Fixed InAppChatActivityResultDelegate for Flutter plugin

commit 4cc2f258346e05a1256086b9ec96b719b170d09b
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Fri Mar 15 13:07:00 2024 +0100

    MCA-3664 Widget API improved

commit 99382cfa8f302fe89c1df79d5e5277c369cd891e
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 17:11:11 2024 +0100

    MCA-3664 removed new lines

commit 3b712a6508a3346788c0ca4d0899598349c9175c
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 13:48:33 2024 +0100

    MCA-3664 removed language from WidgetInfo

commit ee5e7cb659cd22545c715fd363e1c7b31a9ba49a
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 13:35:42 2024 +0100

    MCA-3664 callAvailable replaced with callsEnabled

commit 17e472000185959be1461ee8c149e56e3e11d4fa
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 11:34:39 2024 +0100

    MCA-3664 setDarkMode() deprecated

commit dfe19cbd1f45164250e53b63b7e8f93a26916b4d
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 10:42:50 2024 +0100

    MCA-3664 In

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="org.infobip.mobile.messaging.chat.view.InAppChatActivity">
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:name="org.infobip.mobile.messaging.chat.view.InAppChatFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
