Pull request #430: MCA-3875 Removed deprecated feature dark mode
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3831-remove-deprecated-dark-mode to master

Squashed commit of the following:

commit d8bd79c85b61eaa03ba29e3c84a7ac2f70fe99a8
Merge: 280b161b e9fd032e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Apr 16 16:12:30 2024 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-3831-remove-deprecated-dark-mode

    # Conflicts:
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/InAppChatImpl.java
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/view/InAppChatWebView.java

commit 280b161b9d28ffbe2d0baef1fd001377b9462fab
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Apr 16 16:07:47 2024 +0200

    MCA-3875 Removed deprecated feature dark mode

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
@@ -2,9 +2,7 @@
 <resources>
 
     <!--    region Themes-->
-    <style name="IB_ChatDefaultTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="isLightTheme">true</item>
-    </style>
+    <style name="IB_ChatDefaultTheme" parent="Theme.MaterialComponents.Light.NoActionBar" />
 
     <style name="IB_ChatDefaultTheme.Styled" parent="IB_ChatDefaultTheme">
         <item name="ibChatDefaultStyledTheme">true</item>
