Pull request #432: Jdzubak MCA-3887 widget theme fix
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3887-widget-theme-fix to master

Squashed commit of the following:

commit aa80413d2c8fb58090588390e999eed8904f32e4
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 24 10:31:01 2024 +0200

    MCA-3875 Fix

commit ed43c8e4faf0f2657fdbf32e2ceb62d5589e4c96
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 24 10:25:35 2024 +0200

    MCA-3887 Removed deprecated function in InAppChatView

commit 6d1297e345f71e2c881ad5dfad5dabf4c58752be
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 24 09:56:59 2024 +0200

    MCA-3887 Fixed setWidgetTheme race condition, introduced new callback approach for Widget API calls

--- a/infobip-mobile-messaging-android-demo/src/main/res/values-v29/styles.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values-v29/styles.xml
@@ -8,4 +8,12 @@
         <item name="android:forceDarkAllowed">true</item>
     </style>
 
+    <style name="IB_AppTheme.Chat">
+        <item name="ibChatToolbarStyle">@style/InAppChat.Demo.Toolbar</item>
+        <item name="ibChatAttachmentToolbarStyle">@style/InAppChat.Demo.Toolbar.AttachmentPreview</item>
+        <item name="ibChatInputStyle">@style/InAppChat.Demo.Input</item>
+        <item name="ibChatStyle">@style/InAppChat.Demo.Chat</item>
+        <item name="android:forceDarkAllowed">false</item>
+    </style>
+
 </resources>
