--- a/infobip-mobile-messaging-android-demo/src/main/res/values-v21/styles.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values-v21/styles.xml
@@ -4,5 +4,6 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="isLightTheme">true</item>
     </style>
 </resources>
