--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/subjectTypeInputLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/pushRegIdInputLayout"
+                    app:layout_constraintTop_toBottomOf="@id/lcRegIdInputLayout"
                     android:hint="@string/customer_name">
 
                     <com.google.android.material.textfield.TextInputEditText
