Pull request #436: mtokar-MCA-3882_chat_ready_event
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3882_chat_ready_event to master

Squashed commit of the following:

commit be3b870813bbd71a6596e01d221fb20e7c4efa64
Author: Matus Tokar <mtokar@infobip.com>
Date:   Fri May 17 15:23:48 2024 +0200

    removed free space

commit df0dece54aae72030c8546698c302223cf33dae7
Author: Matus Tokar <mtokar@infobip.com>
Date:   Wed May 15 16:22:24 2024 +0200

    review fixes 2

commit 668c4e798fe5fb8b2eaf062645a3506d0216427e
Merge: b6bd45ec 5eac33f4
Author: Matus Tokar <mtokar@infobip.com>
Date:   Wed May 15 11:19:55 2024 +0200

    Merge remote-tracking branch 'origin/mtokar-MCA-3882_chat_ready_event' into mtokar-MCA-3882_chat_ready_event

commit b6bd45ecadbd3bf91f17c35aa6d08e74127569bc
Author: Matus Tokar <mtokar@infobip.com>
Date:   Wed May 15 11:19:25 2024 +0200

    review fixes 1

commit 5eac33f41624683e1a788d95dec1df9d715e2736
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed May 15 07:56:48 2024 +0000

    Applied suggestion

commit 27cab621ad49fd91964f8b5e925f06a9fbc764c2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed May 15 07:56:25 2024 +0000

    Applied suggestion

commit 5c8fc79614909a48b6214c6a499de1417033a837
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed May 15 07:56:19 2024 +0000

    Applied suggestion

commit 972be85881047dde0eb13faf281205cca69e8d50
Author: Matus Tokar <mtokar@infobip.com>
Date:   Tue May 14 16:28:10 2024 +0200

    doco added

commit f6407ba4742f41c2d0078670b647855dce91d79d
Author: Matus Tokar <mtokar@infobip.com>
Date:   Tue May 14 13:55:40 2024 +0200

    chat availability event

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
@@ -171,6 +171,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mm_open_chat_activity"
+                    android:enabled="false"
                     app:layout_constraintBottom_toTopOf="@+id/openChatFragment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -181,6 +182,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mm_open_chat_fragment"
+                    android:enabled="false"
                     app:layout_constraintBottom_toTopOf="@+id/openChatView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -191,6 +193,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mm_open_chat_view"
+                    android:enabled="false"
                     app:layout_constraintBottom_toTopOf="@+id/personalize"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
