Pull request #439: Jdzubak MCA-4025 configurable InAppChatFragment
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4025-configurable-InAppChatFragment to master

Squashed commit of the following:

commit 964a86b2c74505e1f91ef892db427a4c3812cbe2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 16 15:24:32 2024 +0200

    MCA-4063 Review fixes

commit 56a8c808d39f1a9ad76061d409d834f90007fc2b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 16 15:05:31 2024 +0200

    MCA-4063 Review fixes

commit c1c16a487af6bc1c04a798ba66b0db1e9e039a00
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 16 14:39:26 2024 +0200

    MCA-4063 Review fixes

commit 2ceef1877699d4d8545119d01cf7dd0ad73098d7
Author: Ivan Krešić <Ivan.Kresic@infobip.com>
Date:   Tue Jul 16 12:38:48 2024 +0000

    Applied suggestion

commit 85c30303fd4053b61b3231a0b971b6832c953f98
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 15 13:51:10 2024 +0200

    MCA-4063 Update

commit 8029a80905673b0fdf7845d77a0f34702a3bcdbf
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jul 12 14:46:25 2024 +0200

    MCA-4063 Update

commit e5847fd10c2f1a1757d4d58d9d99d5539c5dcf2e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jul 12 14:01:37 2024 +0200

    MCA-4063 Update

commit 9da22195426de1264fd28ec462fb6c21dcc32921
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 8 14:11:07 2024 +0200

    MCA-4063 Update with master

commit 78f6ae1880c1019a4757c505cff1c9ec9e44ae38
Merge: 33ce0139 05aef417
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 8 13:53:06 2024 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4025-configurable-InAppChatFragment

    # Conflicts:
    #	infobip-mobile-messaging-android-demo/src/chat/java/org/infobip/mobile/messaging/demo/MainActivity.java
    #	infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
    #	infobip-mobile-mes

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
@@ -172,10 +172,21 @@
                     android:layout_height="wrap_content"
                     android:text="@string/mm_open_chat_activity"
                     android:enabled="false"
-                    app:layout_constraintBottom_toTopOf="@+id/openChatFragment"
+                    app:layout_constraintBottom_toTopOf="@+id/showChatFragment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/customization" />
+
+                <Button
+                    android:id="@+id/showChatFragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mm_show_chat_fragment"
+                    android:enabled="false"
+                    app:layout_constraintBottom_toTopOf="@+id/openChatFragment"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/openChatActivity" />
 
                 <Button
                     android:id="@+id/openChatFragment"
@@ -183,10 +194,33 @@
                     android:layout_height="wrap_content"
                     android:text="@string/mm_open_chat_fragment"
                     android:enabled="false"
-                    app:layout_constraintBottom_toTopOf="@+id/openChatView"
+                    app:layout_constraintBottom_toTopOf="@+id/toolbarCheckbox"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/openChatActivity" />
+                    app:layout_constraintTop_toBottomOf="@+id/showChatFragment" />
+
+                <CheckBox
+                    android:id="@+id/toolbarCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mm_toolbar"
+                    app:layout_constraintTop_toBottomOf="@id/openChatFragment"
+                    app:layout_constraintBottom_toTopOf="@id/openChatView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/inputCheckbox"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    />
+
+                <CheckBox
+                    android:id="@+id/inputCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mm_input"
+                    app:layout_constraintTop_toTopOf="@id/toolbarCheckbox"
+                    app:layout_constraintBottom_toBottomOf="@id/toolbarCheckbox"
+                    app:layout_constraintStart_toEndOf="@id/toolbarCheckbox"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
 
                 <Button
                     android:id="@+id/openChatView"
@@ -197,7 +231,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/personalize"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/openChatFragment" />
+                    app:layout_constraintTop_toBottomOf="@+id/toolbarCheckbox" />
 
                 <Button
                     android:id="@+id/personalize"
