--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/fragment_in_app_chat_view_demo.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/fragment_in_app_chat_view_demo.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/colorSurface">
+    android:background="?attr/colorSurface"
+    android:clickable="true"
+    android:focusable="true">
 
     <Button
         android:id="@+id/exit"
@@ -13,12 +15,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/chatNavigateBack"
+        app:layout_constraintEnd_toStartOf="@id/navigateBack"
         android:layout_marginVertical="8dp"
         app:layout_constraintHorizontal_chainStyle="spread" />
 
     <Button
-        android:id="@+id/chatNavigateBack"
+        android:id="@+id/navigateBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Chat navigate back"
