Pull request #466: Mhudicek/MM-6067 fix styling basic inapps
Merge in MML/infobip-mobile-messaging-android from mhudicek/MM-6067-fix-styling-basic-inapps to master

Squashed commit of the following:

commit f336be7a28d801458133ea8f94a47567b82af997
Merge: de47ba34 f8cdf578
Author: Matej Hudicek <matej.hudicek@infobip.com>
Date:   Mon Oct 28 15:00:31 2024 +0100

    Merge branch 'master' of https://git.ib-ci.com/scm/mml/infobip-mobile-messaging-android into mhudicek/MM-6067-fix-styling-basic-inapps

commit de47ba343df690df29016a1f352860dffffc0bc0
Author: Matej Hudicek <matej.hudicek@infobip.com>
Date:   Mon Oct 28 14:09:52 2024 +0100

    InAppDialog style always applied to InApp dialog. Default style white text for dark mode and black text for light mode.

--- a/infobip-mobile-messaging-android-sdk/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/res/values/styles.xml
@@ -2,6 +2,11 @@
 
     <style name="InAppDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:windowNoTitle">true</item>
+        <item name="buttonBarButtonStyle">@style/DialogButtonStyle</item>
+    </style>
+
+    <style name="DialogButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/buttonTextColor</item>
     </style>
 
     <style name="IB_AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
